--- a/index.html
+++ b/index.html
@@ -26,6 +26,19 @@
 						<div class="accordion-body">
 							<iframe class="viz-iframe" src="output/sankey_simplificado.html"></iframe>
 							<div class="mt-2"><a href="output/sankey_simplificado.html" target="_blank">Abrir em nova aba</a></div>
+							<hr>
+							<div>
+								<p>Descrição e Análise</p>
+								<p>
+								A visualização em formato <strong>Sankey</strong> foi escolhida para representar a <em>distribuição dos participantes</em> ao longo das etapas do estudo. Esse tipo de gráfico é especialmente adequado para mostrar fluxos e transições entre grupos, permitindo acompanhar de forma clara como os 38 participantes iniciais se dividiram em diferentes trajetórias: entre grupos de estudo, identificação no segundo dia e adesão ou não aos materiais disponibilizados. A escolha se justifica porque o Sankey facilita a leitura de percursos múltiplos e evidencia perdas ou desvios de participantes em cada fase, algo que seria difícil de perceber em gráficos tradicionais como barras ou pizza.
+								</p>
+								<p>
+								Na análise, observa-se que, apesar da presença integral dos 38 participantes no segundo dia, houve um problema de coleta que reduziu a identificação para apenas 23 indivíduos. Essa limitação é bem destacada no gráfico, já que o fluxo dos “não identificados” aparece como um bloco significativo (15 pessoas). Entre os identificados, nota-se baixa adesão ao material de estudo: apenas 5 dos 13 que tiveram acesso ao assistente de IA o utilizaram, e apenas 2 dos 10 que receberam videoaulas realmente as assistiram. O grupo dos não identificados também mostra uma adesão mínima (3 participantes), mas sem possibilidade de distinguir qual recurso foi utilizado. 
+								</p>
+								<p>
+								A interpretação sugere que, independentemente da modalidade de estudo oferecida, a adesão foi baixa, o que pode impactar diretamente na validade das comparações entre grupos. O Sankey evidencia de forma visual e imediata essa dispersão e a predominância de não adesão, reforçando a necessidade de discutir limitações metodológicas e estratégias futuras para aumentar o engajamento dos participantes.
+								</p>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -38,6 +51,19 @@
 						<div class="accordion-body">
 							<iframe class="viz-iframe" src="output/QND_distribuicao_respostas_radar.html"></iframe>
 							<div class="mt-2"><a href="output/QND_distribuicao_respostas_radar.html" target="_blank">Abrir em nova aba</a></div>
+							<hr>
+							<div>
+								<p>Descrição e Análise</p>
+								<p>
+								A visualização em <strong>gráfico de radar</strong> foi escolhida para representar a <strong>distribuição das respostas do teste QND</strong>. Esse formato permite comparar simultaneamente o desempenho em múltiplas questões, destacando padrões de acerto e erro em cada grupo. A justificativa para essa escolha é que o radar facilita a percepção de consistência ou dispersão nas respostas, evidenciando quais grupos se aproximaram mais das alternativas corretas e em quais pontos houve maior divergência.
+								</p>
+								<p>
+								Na análise, observa-se que os grupos com adesão (IA e Aulas) tendem a apresentar maior proximidade com as alternativas corretas, enquanto o grupo sem adesão mostra maior variabilidade e maior frequência de respostas “Não sei”. Em questões como Q01, Q03 e Q12 (onde a resposta correta era “Verdade”), os grupos com adesão tiveram desempenho praticamente perfeito, enquanto o grupo sem adesão apresentou percentuais menores e maior incerteza. Já em questões de caráter “Falso” (como Q02, Q04, Q07, Q08, Q09 e Q10), os grupos com adesão também se aproximaram mais da resposta correta, embora em alguns casos haja divergência entre IA e Aulas. 
+								</p>
+								<p>
+								O radar evidencia que, de modo geral, a adesão ao material de estudo contribuiu para maior precisão nas respostas, mas também revela que os métodos não são totalmente equivalentes: em algumas questões o grupo de IA se destacou, em outras o grupo de Aulas foi mais consistente. Essa diferença sugere que cada abordagem pode ter pontos fortes específicos, e que o material poderia ser aprimorado para reduzir lacunas. O gráfico, portanto, não apenas mostra a eficácia relativa dos métodos, mas também aponta oportunidades de melhoria na equivalência e qualidade dos recursos oferecidos.
+								</p>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -50,6 +76,22 @@
 						<div class="accordion-body">
 							<iframe class="viz-iframe" src="output/QVC_distribuicao_respostas_radar.html"></iframe>
 							<div class="mt-2"><a href="output/QVC_distribuicao_respostas_radar.html" target="_blank">Abrir em nova aba</a></div>
+							<hr>
+							<div>
+							<p>Descrição e Análise</p>
+							<p>
+							A visualização em <strong>gráfico de radar</strong> também foi escolhida para representar a <em>distribuição das respostas do teste QVC</em>.
+							</p>
+							<p>
+							Na análise, observa-se que os grupos com adesão (IA e Aulas) tendem a apresentar maior proximidade com as alternativas corretas em várias questões, confirmando a eficácia dos materiais de estudo. Por exemplo, em questões como v01, v03, v04 e v06, os grupos com adesão tiveram 100% de acerto, enquanto o grupo sem adesão apresentou percentuais menores. Entretanto, em questões como v02 e v07, nota-se maior variabilidade: o grupo de IA teve desempenho inferior ao esperado (60% em v02 e 20% em v07), enquanto o grupo de Aulas manteve maior consistência. Já em v05 e v08, o grupo de Aulas mostrou respostas divididas, sugerindo possíveis dificuldades de interpretação ou lacunas no material.
+							</p>
+							<p>
+							O radar também evidencia que o grupo sem adesão apresenta maior dispersão e maior frequência de respostas incorretas, como em v07 (53,33% escolheram a alternativa incorreta) e v10 (apenas metade identificou corretamente “Medo do movimento” como fator principal). Isso reforça a importância da adesão ao material de estudo para melhorar a precisão das respostas.
+							</p>
+							<p>
+							Em síntese, o gráfico mostra que tanto o assistente de IA quanto as videoaulas contribuíram para maior acerto em relação ao grupo sem adesão, mas também revela diferenças entre os métodos: em algumas questões o grupo de IA se destacou, em outras o grupo de Aulas foi mais consistente. Essa análise sugere que cada abordagem possui pontos fortes específicos e que há espaço para aprimorar os materiais, garantindo maior uniformidade na aprendizagem. O radar, portanto, cumpre o papel de destacar essas nuances de forma visual e comparativa.
+							</p>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -62,6 +104,22 @@
 						<div class="accordion-body">
 							<iframe class="viz-iframe" src="output/adesao_pontuacao_media.html"></iframe>
 							<div class="mt-2"><a href="output/adesao_pontuacao_media.html" target="_blank">Abrir em nova aba</a></div>
+							<hr>
+							<div>
+							<p>Descrição e Análise</p>
+							<p>
+							Para representar a <em>pontuação média dos grupos</em> nos testes QND e QVC, foi utilizado um <strong>gráfico de barras com barras de erro (desvio padrão) e pontos indicando a mediana</strong>. Essa escolha se justifica porque o formato permite visualizar de forma clara e comparativa não apenas a média dos grupos, mas também a variabilidade dos resultados (via desvio padrão) e a posição central das distribuições (mediana). Assim, o gráfico fornece uma visão mais completa do desempenho, evitando interpretações simplistas baseadas apenas na média.
+							</p>
+							<p>
+							Na análise do teste <strong>QND</strong>, observa-se que o grupo sem adesão obteve média de 6,13 pontos, com desvio padrão relativamente alto (±2,57), indicando grande variabilidade entre os participantes. O grupo que utilizou o assistente de IA apresentou média ligeiramente superior (6,60), com menor dispersão (±1,14), sugerindo maior consistência. Já o grupo que aderiu às videoaulas obteve a maior média (8,00), com desvio padrão moderado (±1,41), mostrando desempenho mais elevado e homogêneo. A mediana acompanha esses resultados, reforçando que o grupo de videoaulas teve melhor desempenho geral.
+							</p>
+							<p>
+							No teste <strong>QVC</strong>, os resultados são mais equilibrados: o grupo sem adesão obteve média de 7,97, praticamente equivalente ao grupo de IA (7,80), ambos com medianas de 8,00. O grupo de videoaulas apresentou média ligeiramente inferior (7,50), mas com maior variabilidade (±2,12). Isso sugere que, nesse teste, a adesão ao material não trouxe ganhos claros em relação ao grupo sem adesão, e que os métodos de estudo tiveram desempenhos semelhantes.
+							</p>
+							<p>
+							Em síntese, o gráfico de barras com erro e mediana evidencia que, no QND, a adesão ao material (especialmente às videoaulas) foi associada a melhores resultados, enquanto no QVC os desempenhos se mostraram mais próximos entre os grupos. A visualização destaca tanto as diferenças de média quanto a consistência dos grupos, permitindo uma interpretação crítica sobre a eficácia dos métodos de estudo em diferentes contextos.
+							</p>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -74,6 +132,22 @@
 						<div class="accordion-body">
 							<iframe class="viz-iframe" src="output/grupo_pontuacao_media.html"></iframe>
 							<div class="mt-2"><a href="output/grupo_pontuacao_media.html" target="_blank">Abrir em nova aba</a></div>
+						<hr>
+						<div>
+							<p>Descrição e Análise</p>
+							<p>
+							Para representar a <em>pontuação média agrupada por nível de adesão</em> nos testes QND e QVC, também utilizamos o <strong>gráfico de barras com barras de erro (desvio padrão) e pontos indicando a mediana</strong>.
+							</p>
+							<p>
+							Na análise do teste <strong>QND</strong>, observa-se uma progressão clara: o grupo sem adesão obteve média de 6,13 pontos, com alta variabilidade (±2,57), enquanto o grupo com adesão parcial apresentou média ligeiramente superior (6,50) e menor dispersão (±1,29). O grupo com adesão total obteve a maior média (7,50), com desvio padrão ainda menor (±1,05), indicando não apenas melhor desempenho, mas também maior consistência entre os participantes. A mediana acompanha essa tendência, reforçando que a adesão ao material contribuiu positivamente para os resultados.
+							</p>
+							<p>
+							No teste <strong>QVC</strong>, os resultados mostram um cenário mais equilibrado. O grupo sem adesão obteve média de 7,97, praticamente equivalente ao grupo com adesão parcial (8,25), ambos com medianas de 8,00. O grupo com adesão total apresentou média ligeiramente inferior (7,67), mas também com baixa variabilidade (±1,03). Isso sugere que, nesse teste, a adesão não trouxe ganhos claros em relação ao grupo sem adesão, e que os desempenhos se mantiveram próximos entre os diferentes níveis de adesão.
+							</p>
+							<p>
+							Em síntese, o gráfico evidencia que no QND a adesão ao material de estudo foi associada a melhores resultados, especialmente quando total, enquanto no QVC os desempenhos se mostraram semelhantes independentemente do nível de adesão. A visualização cumpre o papel de destacar tanto as diferenças de média quanto a consistência dos grupos, permitindo uma interpretação crítica sobre a eficácia da adesão em diferentes contextos de avaliação.
+							</p>
+						</div>
 						</div>
 					</div>
 				</div>
